# ashinkarov.github.com

./: .gitignore  Bib.hs  BibHakyll.hs  Gemfile  _config.yml  archive.html  artem-blog.cabal  atom.xml  bib.bib  default.nix  flake.nix  hie.yaml  ieee.csl  index.html  index.md  links.html  links.md  name.html  name.md  publications.html  robots.txt  site.hs  sitemap.xml
bibliography/: Sinkarovs_2013_SDL_2502323.2502332.html  array-comp.html  asv-thesis.html  bachelors.html  bgs-fortran.html  ccpe-data-layouts.html  cpcgcc.html  data-layouts.html  layout-correctness.html  macro-parser.html  masters.html  rosetta-stone.html  sexynbody.html  transfinite.html
blog/: index.html
css/: default.css  merriweather.css  notosans.css  sakura.css  tema.css
plugins/: ieee.csl  replacer.rb
posts/: 2013-01-31-amazon-luck-left-me.html  2013-01-31-amazon-luck-left-me.markdown  2013-02-01-teaching-operating-systems.html  2013-02-01-teaching-operating-systems.markdown  2013-04-08-updating-my-blog.html  2013-04-08-updating-my-blog.markdown  2013-04-09-firefox-in-gentoo.html  2013-04-09-firefox-in-gentoo.markdown  2015-08-12-spqr.markdown  2015-10-07-rosa-rosa-rosam.html  2015-10-07-rosa-rosa-rosam.markdown  2016-03-23-british-scientists-1.html  2016-03-23-british-scientists-1.markdown  2016-05-12-british-scientists-2.html  2016-05-12-british-scientists-2.markdown  2023-06-12-types23.html  2023-06-12-types23.md  2023-09-04-fhpnc23.html  2023-09-04-fhpnc23.md
publications/: .bib.bib.swp  bib.bib  index.html
pubs/: 2018-ifl-memreuse.html  2018-max-resilience.html  2019-conv-apl.html  (+20 more)
(+63 files in other folders)
