cabal-version:      2.4
name:               artem-blog
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:           My personal blog.

-- A longer description of the package.
description:        Sources for my personal blog.

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            ISC
author:             Artem Shinkarov
maintainer:         tema@pm.me

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable artem-blog
    main-is:          site.hs

    -- Modules included in this executable, other than Main.
    other-modules:    BibHakyll,
                      Bib
		      
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0,
    		      text >= 1.2.5,
                      hakyll >= 4.7,
		      time >= 1.11.1.1,
		      pandoc >= 3.1.2,
		      pandoc-types >= 1.23,
		      binary >= 0.8.9.0,
		      bytestring >= 0.11.4.0,
		      containers >= 0.6.5.1,
		      typed-process >= 0.2.11.0,
		      extra >= 1.7.13,
		      parsec >= 3.0

    default-language: Haskell2010
